# test_project

./: .dockerignore  .gitattributes  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  hello.py  main.py  numerical_functions.py  pyproject.toml
.github/workflows/: docker-image.yml  poetry-tests.yml  release.yml
docs/: README.md
docs/source/: conf.py  index.md  modules.rst  python_template.rst  test_project.rst  test_project.tests.rst
src/test_project/: example.py
src/test_project/tests/: test_example.py
